@@ -1,3 +1,5 @@
+- Improvement: Add unique degree and execution year to existing report [#qubIT-Fenix-6110]
+
 12.0.1 (18-11-2024)
 - Bug Fix: Fix calculation of registration tuition including other events for the same degree and execution interval, but excluding standalone and extracurricular tuitions [#qubIT-Fenix-6109]
 
